# routes/api.php
@@ -29,6 +29,7 @@ Route::name('api.')->namespace('Api')->group(function () {
 
             Route::apiResource('services', 'ServiceController')->only(['index']);
             Route::apiResource('cars', 'CarController')->only(['index']);
+            Route::apiResource('orders', 'OrderController')->only(['index', 'store']);
         });
     });
 });
